<resources>
    <string name="app_name">My Application</string>
    <string name="ingrese_su_nombre">Ingrese su nombre:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="encuentra_la_libertad_con_tu_banco_amigo_gestiona_maneja_y_disfruta_de_tu_dinero_con_solo_un_clic">Encuentra la libertad con tu banco amigo, gestiona, maneja y disfruta de tu dinero con solo un clic</string>
    <string name="descubre_la_sucesion_fibonacci_y_deja_que_su_imaginacion_crezca_tal_como_lo_numeros">Descubre la sucesion Fibonacci y deja que su imaginacion crezca tal como lo numeros</string>
    <string name="prueba_nuestra_calculadora_de_proyecto_para_hacer_la_vida_m_s_f_cil_en_tus_proyectos_es_s_per_til_y_te_ahorra_trabajo">¡Prueba nuestra calculadora de proyecto para hacer la vida más fácil en tus proyectos! ¡Es súper útil y te ahorra trabajo!</string>
    <string name="prueba_nuestra_calculadora_de_proyecto_para_hacer_la_vida_m_s_f_cil_es_s_per_til_y_te_ahorra_trabajo">¡Prueba nuestra calculadora de proyecto para hacer la vida más fácil! ¡Es súper útil y te ahorra trabajo!</string>
    <string name="copyright_2023">copyright 2023</string>
    <string name="login_image">Login image</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="usuario">Usuario:</string>
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>
    <string name="icono_para_ingresar_a_las_funcionalidades_del_banco">icono para ingresar a las funcionalidades del banco</string>
    <string name="icono_para_usar_la_calculadora">icono para usar la calculadora</string>
    <string name="icono_para_usar_la_secuencia_fibonacci">icono para usar la secuencia fibonacci</string>
    <string name="icono_para_usar_los_servicios_del_banco">icono para usar los servicios del banco</string>
    <string name="tu_banco_amigo">¡Tu banco amigo!</string>
    <string name="fibonacci">Fibonacci</string>
    <string name="calculadora">Calculadora</string>
    <string name="resultado">Resultado</string>
</resources>